--- a/app/views/jogo.ejs
+++ b/app/views/jogo.ejs
@@ -19,6 +19,32 @@
 				$('#btn_sair').click(function(){
 					window.location.href = '/sair';
 				});
+
+				$('#btn_aldeoes').click(function(){
+					$('#msg_erros').hide();
+					$('#msg_sucesso').hide();
+
+					$.ajax({
+						url: '/suditos',
+						method: 'get',
+						success: function(data) {
+							$('#acoes').html(data);
+						}
+					});
+				});
+
+				$('#btn_pergaminhos').click(function(){
+					$('#msg_erros').hide();
+					$('#msg_sucesso').hide();
+					
+					$.ajax({
+						url: '/pergaminhos',
+						method: 'get',
+						success: function(data) {
+							$('#acoes').html(data);
+						}
+					})
+				});
 			});	
 
 		</script>
@@ -36,32 +62,44 @@
 		</nav>
 
 	    <div class="container">
+
+	    	<% if(msg === 'erro') { %>
+	    		<div class="alert alert-danger" id="msg_erros">
+	    			<strong>Operação inválida, verifique se todos os campos foram informados.</strong>
+	    		</div>
+	    	<% } %>
+
+	    	<% if(msg === 'sucesso') { %>
+	    		<div class="alert alert-info" id="msg_sucesso">
+	    			<strong>Ação realizada com sucesso.</strong>
+	    		</div>
+	    	<% } %>
 	    	
 			<div class="row">
 	    		<div class="col-sm-3 casa">
-					<img src="images/casa_martell.jpg" />
+					<img src="images/casa_<%= img_casa %>.jpg" />
 				</div>
 
 	    		<div class="col-sm-9">
 					<div class="row barra-superior">
 						<div class="col-sm-2"> 
 							<img src="images/habilidades/temor.jpg" title="Temor" alt="Temor" />
-							<span>754</span>
+							<span><%= jogo.temor %></span>
 						</div>
 						
 						<div class="col-sm-2"> 
 							<img src="images/habilidades/sabedoria.jpg" title="Sabedoria" alt="Sabedoria"/>
-							<span>754</span>
+							<span><%= jogo.sabedoria %></span>
 						</div>
 						
 						<div class="col-sm-2"> 
 							<img src="images/habilidades/comercio.jpg" title="Comércio" alt="Comércio"/>
-							<span>754</span>
+							<span><%= jogo.comercio %></span>
 						</div>
 						
 						<div class="col-sm-2"> 
 							<img src="images/habilidades/magia.jpg" title="Magia" alt="Magia"/>
-							<span>754</span>
+							<span><%= jogo.magia %></span>
 						</div>
 					</div>
 				</div>
@@ -70,7 +108,7 @@
 			<div class="row">
 				<div class="col-sm-3"></div>
 				<div class="col-sm-9">
-					<div class="acoes"></div>					
+					<div class="acoes" id="acoes">Senhor, o que gostaria de fazer hoje?</div>					
 				</div>
 			</div>
 			
@@ -81,11 +119,11 @@
 			
 				<div class="row">
 					<div class="col-sm-1">
-						<img src="images/outros/suditos.jpg" title="Aldeões" alt="Aldeões"/>
+						<img src="images/outros/suditos.jpg" title="Aldeões" alt="Aldeões" id="btn_aldeoes" />
 					</div>
 					
 					<div class="col-sm-1">
-						<img src="images/outros/pergaminho.jpg" title="Pergaminhos" alt="Pergaminhos"/>
+						<img src="images/outros/pergaminho.jpg" title="Pergaminhos" alt="Pergaminhos" id="btn_pergaminhos" />
 					</div>
 					
 					<div class="col-sm-8"></div>
